# Agent-Assets-Manager

./: .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  fileops.rs  lib.rs  main.rs  operations.rs  operations_tests.rs  platform.rs  scanner.rs  scanner_tests.rs
src-tauri/src/adapters/: claude.rs  claude_app.rs  codex.rs  cursor.rs  gemini.rs  generic_cli.rs  hermes.rs  kimi.rs  mod.rs  openclaw.rs  opencode.rs  qwen.rs  trae.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  queries.rs  schema.rs
src-tauri/src/scanner/: analysis.rs  mod.rs  parsers.rs
src/components/: AssetCard.tsx  AssetCardSkeleton.tsx  AssetDetailPanel.tsx  AssetTableSkeleton.tsx  AssetTableView.tsx  AssetToolbar.tsx  Badge.tsx  ConfirmDialog.tsx  DetailPanel.tsx  DropdownMenu.tsx  ErrorBoundary.tsx  FirstRunWizard.tsx  FormField.tsx  KpiCard.tsx  PlatformConsistencyMatrix.tsx  PlatformIcon.test.tsx  PlatformIcon.tsx  PlatformInstallButtons.tsx  PreviewModal.tsx  ProgressOverlay.tsx  SelectionBatchBar.tsx  Sidebar.test.tsx  Sidebar.tsx  Skeleton.tsx  StatusBar.test.tsx  StatusBar.tsx  Toast.tsx  Tooltip.tsx  WindowChrome.test.tsx  WindowChrome.tsx
src/data/: mockData.ts
src/hooks/: useAssetOperations.ts  useCopyToClipboard.ts  useFocusTrap.ts  useSkillSelection.ts
src/mappers/: index.test.ts  index.ts
src/pages/: AssetsPage.test.ts  AssetsPage.tsx  BackupsPage.tsx  DiagnosticsPage.test.ts  DiagnosticsPage.tsx  ModelsPage.test.ts  (+10 more)
(+18 files in other folders)
